# pre-commit-executable-files

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  setup.cfg
pre_commit_executable_files/: check_executable_files.py
