[metadata]
name = check_executable_files
description = checks for files that should be executable
version = 0.1.0
author = Richard Février
author_email = richard@fevrier.io
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-executable-files = pre_commit_executable_files.check_executable_files:main